kubernetes/monitors/serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: azure-eventhub
  namespace: default
spec:
  hosts:
    - "dev-hyukjun-evhub-001.servicebus.windows.net" # Event Hub 네임스페이스
  ports:
    - number: 5671
      name: amqp-tls
      protocol: TLS # AMQP over TLS를 표현
    - number: 5672
      name: amqp
      protocol: TCP # 일반 AMQP 트래픽
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: azure-storage
  namespace: default
spec:
  hosts:
    - "devoffsetsac001.blob.core.windows.net" # Storage 엔드포인트
  ports:
    - number: 443
      name: https
      protocol: https
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: azure-cosmosdb
  namespace: default
spec:
  hosts:
    - "dev-cosmosdb-001.mongo.cosmos.azure.com" # Cosmos DB 계정 이름
  ports:
    - number: 10255
      name: mongo
      protocol: TCP
  resolution: DNS
